# bank-system

./: .clang-format  CMakeLists.txt  README.md
include/: account.h  accountManager.h  bank.h  bankSystem.h  client.h  setup.h  utils.h
include/utils/: account.h
src/: account.cpp  accountManager.cpp  bank.cpp  bankSystem.cpp  client.cpp  main.cpp  setup.cpp  utils.cpp
src/utils/: account.cpp
test/: testAccount.cpp  testAccountManager.cpp  testBank.cpp  testBankSystem.cpp  testClient.cpp  testUtils.cpp
test/utils/: testAccount.cpp  testUtils.cpp
